# quant-fpl

./: .gitignore  pyproject.toml
notebooks/: explore_fpl.ipynb
src/quant_fpl/: __init__.py  cli.py
src/quant_fpl/data/: fpl_client.py  greedy_picker.py  tidy.py
