[project]
name = "quant_fpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.scripts]
quant_fpl = "quant_fpl.cli:main"
